--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -156,8 +156,9 @@ a {
   padding-bottom: 21px;
 }
 
-.service-left .card__text--lg {
+.service-left .font--large{
   padding-bottom: 120px;
+  letter-spacing: -0.33px;
 }
 
 .service-right {
