--- a/practice-01/styles/font.css
+++ b/practice-01/styles/font.css
@@ -23,6 +23,8 @@
   font-weight: var(--font-weight-bold);
   font-size: var(--font-size-small);
   line-height: var(--line-height-small);
+  /* transform */
+  text-transform: uppercase;
 }
 
 .card__text {
