--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -64,13 +64,13 @@ a {
   cursor: pointer;
 }
 
-.card__body:hover .card__title:first-of-type{
+.card__body:hover .card__title:first-of-type {
   color: var(--black);
 }
-.card__text:hover{
+.card__text:hover {
   color: var(--crab-nebula);
 }
-.card__text:active{
+.card__text:active {
   color: var(--alienated);
 }
 .card__img .card__img-pic {
@@ -91,7 +91,6 @@ a {
 
 .card__body .card__text {
   padding-bottom: 24px;
-
 }
 /* menu__list */
 .menu__list {
@@ -100,7 +99,7 @@ a {
 .menu__list .item:hover {
   color: var(--crab-nebula);
 }
-.menu__list .item:active{
+.menu__list .item:active {
   color: var(--alienated);
 }
 /*------------------------------------*\
@@ -136,12 +135,11 @@ a {
 }
 .nav__button .btn--secondary {
   background-color: var(--crab-nebula);
-  color: white;
+  color: var(--white);
   margin-left: 16px;
 }
 .navbar .item {
   font-family: var(--font-family);
-  color: var(--black);
   text-align: center;
 
   padding: 20px 0;
@@ -167,12 +165,8 @@ a {
 }
 .carousel__content--above {
   letter-spacing: -0.888889px;
-  color: var(--black);
 }
 
-.carousel__content--below {
-  color: var(--west_chester-grey);
-}
 /* header__tab */
 .header__tab {
   padding-top: 100px;
@@ -229,7 +223,7 @@ a {
 .service .card:hover {
   border: 3px solid transparent;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: var(--white);
   box-shadow: 1px 0 50px rgb(0 0 0 / 10%);
 }
 .service-left .font--large {
@@ -381,7 +375,6 @@ a {
 }
 .cta__title {
   letter-spacing: -0, 89px;
-  color: var(--white);
 }
 /* cta__button */
 .cta__button {
@@ -401,13 +394,21 @@ a {
   filter: drop-shadow(0px 24px 32px rgba(0, 0, 0, 0.1));
 }
 .cta__text {
-  color: var(--white);
   margin-top: 24px;
   cursor: pointer;
 }
-.cta__text:hover {
+.cta__button .cta__text:hover {
   color: var(--crab-nebula);
   text-decoration: underline;
+}
+.cta__button .btn--chevron:hover {
+  background-color: var(--crab-nebula);
+  color: var(--white);
+  border: none;
+}
+.cta__button .btn--chevron:active {
+  transform: translateY(5px);
+  color: var(--white);
 }
 /*------------------------------------*\
   #footer-SECTION
@@ -416,9 +417,7 @@ a {
   background: var(--white);
   position: relative;
 }
-.footer .item {
-  color: var(--black);
-}
+
 /* footer__content */
 .footer__content {
   display: flex;
@@ -505,5 +504,3 @@ a {
   font-weight: var(--font-weight-medium);
   font-size: var(--font-size-medium);
 }
-
-
