--- a/practice-01/styles/font.css
+++ b/practice-01/styles/font.css
@@ -17,13 +17,15 @@
 }
 
 /* text */
-.text--grey{
+.text--grey {
   color: var(--west_chester-grey);
 }
-.text--white{
+
+.text--white {
   color: var(--white);
 }
-.text--black, .text--black .item{
+
+.text--black{
   color: var(--black);
 }
 
