--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -67,12 +67,15 @@ a {
 .card__body:hover .card__title:first-of-type {
   color: var(--black);
 }
+
 .card__text:hover {
   color: var(--crab-nebula);
 }
+
 .card__text:active {
   color: var(--alienated);
 }
+
 .card__img .card__img-pic {
   width: 100%;
   /* padding: -30px; background padding */
@@ -92,16 +95,20 @@ a {
 .card__body .card__text {
   padding-bottom: 24px;
 }
+
 /* menu__list */
 .menu__list {
   display: flex;
 }
+
 .menu__list .item:hover {
   color: var(--crab-nebula);
 }
+
 .menu__list .item:active {
   color: var(--alienated);
 }
+
 /*------------------------------------*\
   #Header-SECTION
 \*------------------------------------*/
@@ -112,6 +119,7 @@ a {
   width: 100%;
   background: var(--lighthouse);
 }
+
 /* header__content */
 .header__content {
   display: flex;
@@ -120,6 +128,7 @@ a {
 
   padding: 29px 0;
 }
+
 /* nav */
 .navbar {
   width: 80%;
@@ -127,17 +136,21 @@ a {
   justify-content: space-between;
   align-items: center;
 }
+
 .nav__menu .list__item {
   padding: 0 20px;
 }
+
 .nav__menu .item {
   position: relative;
 }
+
 .nav__button .btn--secondary {
   background-color: var(--crab-nebula);
   color: var(--white);
   margin-left: 16px;
 }
+
 .navbar .item {
   font-family: var(--font-family);
   text-align: center;
@@ -155,6 +168,7 @@ a {
   background-color: var(--alienated);
   transition: all 0.5s;
 }
+
 .nav__menu .item:hover::before {
   width: 100%;
 }
@@ -163,6 +177,7 @@ a {
 .header__carousel {
   padding-top: 70px;
 }
+
 .carousel__content--above {
   letter-spacing: -0.888889px;
 }
@@ -190,6 +205,7 @@ a {
 .tab__menu .item {
   color: var(--lucky-grey);
 }
+
 .tab__menu .item:hover {
   color: var(--black);
 }
@@ -205,10 +221,12 @@ a {
   display: flex;
   justify-content: space-between;
 }
+
 .service-left,
 .service-right {
   width: 50%;
 }
+
 /* service-left */
 .service-left {
   width: 47%;
@@ -220,12 +238,14 @@ a {
   padding-top: 24px;
   padding-bottom: 21px;
 }
+
 .service .card:hover {
   border: 3px solid transparent;
   border-radius: 8px;
   background-color: var(--white);
   box-shadow: 1px 0 50px rgb(0 0 0 / 10%);
 }
+
 .service-left .font--large {
   padding-bottom: 120px;
   padding-top: 14px;
@@ -235,6 +255,7 @@ a {
   line-height: var(--line-height-xx-large);
   letter-spacing: -0.555556px;
 }
+
 /* service-right */
 .service__img {
   width: 100%;
@@ -265,6 +286,7 @@ a {
   height: 242px;
   margin-bottom: 16px;
 }
+
 .product__pic {
   width: 100%;
 }
@@ -288,6 +310,7 @@ a {
 
   object-fit: cover;
 }
+
 /* marketing-right */
 .marketing-right {
   display: flex;
@@ -318,6 +341,7 @@ a {
 .card--horizontal-block:nth-child(1) {
   width: 70%;
 }
+
 .card--horizontal-block:nth-child(2) {
   width: 30%;
 }
@@ -356,35 +380,43 @@ a {
 
   margin-top: 180px;
 }
+
 .cta .container {
   padding-top: 120px;
 }
+
 .cta__content {
   display: flex;
   justify-content: space-between;
   align-items: center;
   align-items: center;
 }
+
 /* cta__passage */
 .cta__passage {
   width: 60%;
 }
+
 .cta__passage .cta__text {
   padding-top: 24px;
   opacity: 72%;
 }
+
 .cta__title {
   letter-spacing: -0, 89px;
 }
+
 /* cta__button */
 .cta__button {
   text-align: center;
 }
+
 .cta__button .btn__icon {
   padding-left: 32px;
   width: 8px;
   height: 12px;
 }
+
 .btn--chevron {
   border-radius: none;
   width: 198px;
@@ -393,23 +425,28 @@ a {
 
   filter: drop-shadow(0px 24px 32px rgba(0, 0, 0, 0.1));
 }
+
 .cta__text {
   margin-top: 24px;
   cursor: pointer;
 }
+
 .cta__button .cta__text:hover {
   color: var(--crab-nebula);
   text-decoration: underline;
 }
+
 .cta__button .btn--chevron:hover {
   background-color: var(--crab-nebula);
   color: var(--white);
   border: none;
 }
+
 .cta__button .btn--chevron:active {
   transform: translateY(5px);
   color: var(--white);
 }
+
 /*------------------------------------*\
   #footer-SECTION
 \*------------------------------------*/
@@ -427,6 +464,10 @@ a {
   margin-bottom: 134px;
 }
 
+.footer__content .item{
+  color: var(--black);
+}
+
 .content-left {
   width: 30%;
 }
@@ -442,6 +483,7 @@ a {
   margin-right: 16px;
   padding-top: 25px;
 }
+
 /* footer__content-right */
 .footer__content-right {
   width: 70%;
@@ -452,6 +494,7 @@ a {
 .footer__menu .menu__list {
   flex-direction: column;
 }
+
 .footer__menu #list--mark {
   font-weight: var(--font-weight-bold);
 }
@@ -468,6 +511,7 @@ a {
   mix-blend-mode: normal;
   opacity: 0.24;
 }
+
 /* footer__fuel */
 .footer__rule {
   display: flex;
@@ -492,13 +536,16 @@ a {
 .rule__menu {
   justify-content: space-around;
 }
+
 .rule__menu .item {
   padding-right: 48px;
 }
+
 .rule__locale {
   display: flex;
   align-items: center;
 }
+
 .btn--flex {
   border: none;
   font-weight: var(--font-weight-medium);
