--- a/practice-01/styles/variable.css
+++ b/practice-01/styles/variable.css
@@ -24,7 +24,7 @@
 
   /* -------------font-size---------------- */
   --font-size-small: 14px; /*h6*/
-  --font-size-date_time: 16px; /*h5*/
+  --font-size-x-small: 16px; /*h5*/
   --font-size-medium: 18px; /*h4*/
   --font-size-large: 24px; /*h3*/
   --font-size-x-large: 40px; /*h2*/
