--- a/practice-01/styles/index.css
+++ b/practice-01/styles/index.css
@@ -105,7 +105,9 @@ a {
 .menu__list {
   display: flex;
 }
-
+.menu__list .item{
+  color: var(--black);
+}
 .menu__list .item:hover {
   color: var(--crab-nebula);
 }
