--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -43,9 +43,7 @@ a {
   line-height: var(--line-height-small);
 }
 
-.btn--primary {
-  color: var(--black);
-}
+
 
 .btn--primary:hover {
   border-color: var(--crab-nebula);
@@ -55,6 +53,8 @@ a {
 .btn--primary:active {
   background-color: var(--crab-nebula);
   transform: translateY(2px);
+}
+.btn--primary:active .text--black {
   color: var(--white);
 }
 
@@ -576,5 +576,20 @@ a {
   /* 768px = 48em */
   .header__content .nav__menu {
     display: none;
+  }
+}
+@media screen and (max-width: 59.8125em ){
+  /* 957px = 59.8125em */
+  .nav__button {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    margin-left: 40px;
+  }
+  .nav__button .btn--secondary {
+    background-color: var(--crab-nebula);
+    color: var(--white);
+    margin-left: 0;
+    margin-top: 10px;
   }
 }
