--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -195,13 +195,13 @@ a {
 /* header__tab */
 .header__tab {
   margin-top: 100px;
-  width: 100%;
-  height: 54px;
 }
 
 .header__tab .tab__menu {
-  width: 40%;
-  justify-content: space-between;
+  justify-content: flex-start;
+}
+.header__tab .item {
+  margin-right: 40px;
 }
   /*padding item :before  */
 .tab__menu .item {
@@ -580,16 +580,5 @@ a {
 }
 @media screen and (max-width: 59.8125em ){
   /* 957px = 59.8125em */
-  .nav__button {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    margin-left: 40px;
+
   }
-  .nav__button .btn--secondary {
-    background-color: var(--crab-nebula);
-    color: var(--white);
-    margin-left: 0;
-    margin-top: 10px;
-  }
-}
