--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -71,6 +71,8 @@ a {
 /* card */
 .card {
   cursor: pointer;
+  border: none;
+  flex-direction: unset;
 }
 
 .card__body:hover .card__title:first-of-type {
@@ -277,6 +279,7 @@ a {
 /*------------------------------------*\
   #Product-SECTION
 \*------------------------------------*/
+
 .product .container {
   margin-top: 120px;
 }
