--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -67,6 +67,9 @@ a {
 /* card */
 .card {
   cursor: pointer;
+  border: none;
+  border-radius: unset;
+  flex-direction: unset;
 }
 
 .card__body:hover .card__title:first-of-type {
