--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -559,3 +559,40 @@ a {
   font-weight: var(--font-weight-medium);
   font-size: var(--font-size-medium);
 }
+
+
+
+
+
+/************** Responsive **************/
+/* Breakpoint */
+/*
+** Vertical screen for small smartphone : 20em < 30em // [320px < 480px]
+** Horizontal screen for small smartphones : 30em < 40em // [480px < 640px]
+** Horizontal screen for medium smartphones : 40em < 48em //[640px < 768px ]
+** Screen horizontally for tablets (eg iPad) : 48em < 64 em // [768px < 1024px ]
+** Large screens and Desktops                 :  64em < 75 em [1024px < 1200px]
+** Extra large                                  : > 75em
+*/
+
+/* ------------------------------------*\
+  @media queries
+\*------------------------------------*/
+@media screen and (min-width: 75em) {
+  /* 1200px */
+  .container {
+    padding: 0 150px;
+  }
+}
+@media screen and (min-width: 64em ) and ( max-width : 75em) {
+  /* 1024px < 1200 px */
+  .container{
+  padding : 0 60px;
+  }
+}
+@media screen and (min-width: 48em) and (max-width: 64em) {
+  /* 768px < 1024px */
+}
+@media screen and (min-width: 30em) and (max-width: 48em) {
+  /* 480px < 768px */
+}
