--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -194,13 +194,14 @@ a {
 
 /* header__tab */
 .header__tab {
-  padding-top: 100px;
+  margin-top: 100px;
+  /* err: padding-top > border-box */
   width: 100%;
   height: 54px;
 }
 
 .header__tab .tab__menu {
-  width: 40%;
+  width: 55%;
   justify-content: space-between;
 }
 
