--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -160,7 +160,31 @@ a {
   color: var(--white);
   margin-left: 16px;
 }
-
+.bars {
+  background: var(--black);
+  opacity: 70%;
+  /* content: " "; */
+  display: none;
+  height: 2px;
+  position: relative;
+  width: 18px;
+}
+.bars::before,
+.bars::after {
+  background: var(--black);
+  opacity: 70%;
+  content: " ";
+  display: inline-block;
+  height: 2px;
+  position: absolute;
+  width: 18px;
+}
+.bars::before {
+  top: 5px;
+}
+.bars::after {
+  top: -5px;
+}
 .navbar .item {
   font-family: var(--font-family);
   text-align: center;
@@ -199,31 +223,7 @@ a {
   width: 100%;
   height: 54px;
 }
-.bars {
-  background: var(--black);
-  opacity: 70%;
-  /* content: " "; */
-  display: none;
-  height: 2px;
-  position: relative;
-  width: 18px;
-}
-.bars::before,
-.bars::after {
-  background: var(--black);
-  opacity: 70%;
-  content: " ";
-  display: inline-block;
-  height: 2px;
-  position: absolute;
-  width: 18px;
-}
-.bars::before {
-  top: 5px;
-}
-.bars::after {
-  top: -5px;
-}
+
 .header__tab .tab__menu {
   justify-content: flex-start;
 }
@@ -232,7 +232,9 @@ a {
   padding-bottom: 27px;
   margin-right: 40px;
 }
-
+.shape {
+  display: none;
+}
 .list--mark {
   color: var(--black);
 }
@@ -640,7 +642,44 @@ a {
   }
 }
 @media screen and (max-width: 30em) {
+  /*  < 480 */
   .navbar .nav__button {
+    display: none;
+  }
+}
+/* dropdown */
+@media screen and (max-width: 40em) {
+  /* < 640 */
+  .header .container {
+    padding-bottom: 24px;
+  }
+  .header__tab {
+    margin-top: 32px;
+  }
+  .header__tab .tab__menu {
+    width: 100%;
+    max-width: 40em;
+    margin: auto;
+    text-align: center;
+    align-items: center;
+  }
+  .header__tab .tab__menu .list--mark {
+    width: 100%;
+    padding: 14px ;
+    background-color: var(--white);
+    border: 1px solid var(--gainsboro);
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .menu__list {
+    display: block;
+  }
+  .shape {
+    display: inline;
+  }
+  .tab__menu .item {
     display: none;
   }
 }
