Fix : Margin & padding header

--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -647,6 +647,13 @@ a {
   .container {
     padding: 0 25px;
   }
+  .header__carousel{
+    margin-top: 23px;
+    padding-top: 0;
+  }
+  .header__tab {
+    margin-top: 50px;
+  }
 }
 @media screen and (max-width: 30em) {
   /*  < 480 */
