--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -63,19 +63,19 @@
 /************** Responsive **************/
 /* Breakpoint */
 /*
-** Vertical screen for small smartphone : 20em < 30em // [320px < 480px]
-** Horizontal screen for small smartphones : 30em < 40em // [480px < 640px]
-** Horizontal screen for medium smartphones : 40em < 48em //[640px < 768px ]
-** Screen horizontally for tablets (eg iPad) : 48em < 64 em // [768px < 1024px ]
-** Large screens and Desktops                 :  64em < 75 em [1024px < 1200px]
-** Extra large                                  : > 75em
+** Vertical screen for small smartphone : 20rem < 30rem // [320px < 480px]
+** Horizontal screen for small smartphones : 30rem < 40rem // [480px < 640px]
+** Horizontal screen for medium smartphones : 40rem < 48rem //[640px < 768px ]
+** Screen horizontally for tablets (eg iPad) : 48rem < 64 rem // [768px < 1024px ]
+** Large screens and Desktops                 :  64rem < 75 rem [1024px < 1200px]
+** Extra large                                  : > 75rem
 */
 
 /* ------------------------------------*\
   @media queries -font.css
 \*------------------------------------*/
 /* header */
-@media screen and (max-width: 48em) {
+@media screen and (max-width: 48rem) {
   /* < 768px */
   .font--large {
     font-size: var(--font-size-xx-large);
@@ -83,7 +83,7 @@
   }
 }
 
-@media screen and (max-width: 30em) {
+@media screen and (max-width: 30rem) {
   /* < 480px */
   .font--large {
     font-size: var(--font-size-x-large);
