--- a/practice-02/styles/variable.css
+++ b/practice-02/styles/variable.css
@@ -23,19 +23,19 @@
   --font-weight-bold: 700; /*b3*/
 
   /* -------------font-size---------------- */
-  --font-size-small: 14px; /*h6*/
-  --font-size-x-small: 16px; /*h5*/
-  --font-size-medium: 18px; /*h4*/
-  --font-size-large: 24px; /*h3*/
-  --font-size-x-large: 36px;
-  --font-size-xx-large: 40px; /*h2*/
-  --font-size-xxx-large: 64px; /*h1*/
+  --font-size-small: 0.875rem; /*h6*/
+  --font-size-x-small: 1rem; /*h5*/
+  --font-size-medium: 1.125rem; /*h4*/
+  --font-size-large: 1.5rem; /*h3*/
+  --font-size-x-large: 2.25rem;
+  --font-size-xx-large: 2.5rem; /*h2*/
+  --font-size-xxx-large: 4rem; /*h1*/
 
   /* -------------line-height-------------- */
-  --line-height-small: 19px;
-  --line-height-medium: 24px;
-  --line-height-large: 34px;
-  --line-height-x-large: 46px;
-  --line-height-xx-large: 50px;
-  --line-height-xxx-large: 74px;
+  --line-height-small: 1.1875rem;
+  --line-height-medium: 1.5rem;
+  --line-height-large: 2.125rem;
+  --line-height-x-large: 2.875rem;
+  --line-height-xx-large: 3.125rem;
+  --line-height-xxx-large: 4.625rem;
 }
