--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -225,7 +225,7 @@ a {
   margin-top: 100px;
   /* err: padding-top > border-box */
   width: 100%;
-  height: 54px;
+  padding-bottom: 25px;
 }
 
 .header__tab .tab__menu {
