--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -10,7 +10,12 @@ body {
   font-family: var(--font-family);
   font-style: normal;
 }
-
+html {
+  font-size: 16px;
+}
+body {
+  font-size: var(--font-size-base);
+}
 a {
   text-decoration: none;
 }
