--- a/practice-02/styles/variable.css
+++ b/practice-02/styles/variable.css
@@ -3,6 +3,7 @@
 :root {
   /* --------------font-------------------- */
   --font-family: "Satoshi", sans-serif;
+  --font-size-base : 1rem;
 
   /* -------------color-------------------- */
   /* https://colornamer.robertcooper.me/  */
@@ -24,7 +25,6 @@
 
   /* -------------font-size---------------- */
   --font-size-small: 0.875rem; /*h6*/
-  --font-size-x-small: 1rem; /*h5*/
   --font-size-medium: 1.125rem; /*h4*/
   --font-size-large: 1.5rem; /*h3*/
   --font-size-x-large: 2.25rem;
