--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -48,8 +48,7 @@
 
 .card__footer {
   font-weight: var(--font-weight-medium);
-  font-size: var(--font-size-base);
-  line-height: var(--line-height-x-small);
+  line-height: var(--line-height-small);
 }
 
 /* font */
