--- a/practice-02/styles/variable.css
+++ b/practice-02/styles/variable.css
@@ -28,7 +28,7 @@
   --font-size-medium: 18px; /*h4*/
   --font-size-x-medium: 20px;
   --font-size-xx-medium: 24px; /*h3*/
-  --font-size-large : 32px
+  --font-size-large : 32px;
   --font-size-x-large: 36px;
   --font-size-xx-large: 40px; /*h2*/
   --font-size-xxx-large: 64px; /*h1*/
