--- a/practice-02/styles/variable.css
+++ b/practice-02/styles/variable.css
@@ -36,6 +36,7 @@
   /* -------------line-height-------------- */
   --line-height-small: 1.1875rem;
   --line-height-medium: 1.5rem;
+  --line-height-x-medium: 1.875rem;
   --line-height-large: 2.125rem;
   --line-height-x-large: 2.875rem;
   --line-height-xx-large: 3.125rem;
