--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -292,6 +292,10 @@ a {
 }
 .service-left .card__body {
   width: 80%;
+  justify-content: space-between;
+}
+.service-left .card__text {
+  padding-bottom: 120px;
 }
 
 .service .card:hover {
@@ -299,6 +303,7 @@ a {
   border-radius: 8px;
   background-color: var(--white);
   box-shadow: 1px 0 50px rgb(0 0 0 / 10%);
+  padding: 20px ;
 }
 
 .service-left .font--large {
@@ -314,7 +319,7 @@ a {
 /* service-right */
 .service__img {
   width: 100%;
-  height: 370px;
+  height: 100%;
   object-fit: cover;
   /* ? */
 }
@@ -736,26 +741,28 @@ a {
   .service-left {
     margin-bottom: 30px;
   }
-}
-@media screen and (max-width: 30em) {
   .service__img {
-    height: auto;
+    height: 50vh;
   }
 }
-
 @media screen and (max-width: 768px) {
   .service .container {
     margin-top: 70px;
   }
-  .service-left .font--large {
-    line-height: var(--line-height-x-large);
-    font-size: var(--font-size-medium);
-    margin-bottom: 30px;
+  .service-left .card__text {
+    padding-bottom: 60px ;
   }
+
 }
 @media screen and (max-width: 480px) {
-  .service-left .font--large {
-    font-size: var(--font-size-medium);
-    line-height: var(--line-height-large);
+  .service-left .card__text {
+    padding-bottom: 30px;
   }
 }
+@media screen and (min-width: 768px) {
+  .service-left .card__text {
+    font-size: var(--font-size-large);
+    line-height: var(--line-height-xx-large);
+  }
+}
+
